# metacall-playground

./: Cargo.toml  README.md  pipeline.js  pipeline.py  test.js  test.py
src/: main.rs  models.rs
