[package]
name = "polyglot-devops-thing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
metacall = "0.5.2"
ratatui = "0.29.0"
tui-textarea = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"

[build-dependencies]
metacall-sys = "0.1.2"
